--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
   },
   "dependencies": {
     "next": "10.2.3",
+    "next-i18next": "8.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "eslint": "^7.28.0",
-    "prettier": "^2.3.1",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
+    "eslint": "7.28.0",
+    "prettier": "2.3.1",
     "typescript": "4.3.2"
   }
 }
