--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,55 +10,85 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "images/touch/homescreen48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "images/touch/homescreen72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "images/touch/homescreen96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "images/touch/homescreen144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "images/touch/homescreen168.png",
-      "sizes": "168x168",
-      "type": "image/png"
-    },
-    {
-      "src": "images/touch/homescreen192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android-chrome-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/images/logo-maskable-512.png",
       "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/images/logo.svg",
+      "sizes": "512x512"
+    },
+    {
+      "src": "/images/logo-16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome.svg",
       "sizes": "512x512",
       "purpose": "monochrome"
+    },
+    {
+      "src": "/images/logo-monochrome-16.png",
+      "sizes": "16x16",
+      "purpose": "monochrome",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome-32.png",
+      "sizes": "32x32",
+      "purpose": "monochrome",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome-64.png",
+      "sizes": "64x64",
+      "purpose": "monochrome",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome-128.png",
+      "sizes": "128x128",
+      "purpose": "monochrome",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome-256.png",
+      "sizes": "256x256",
+      "purpose": "monochrome",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/logo-monochrome-512.png",
+      "sizes": "512x512",
+      "purpose": "monochrome",
+      "type": "image/png"
     }
   ]
 }
