--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "start": "next start",
     "test": "npm run lint && npm run type-check",
     "type-check": "tsc --noEmit --skipLibCheck",
-    "lint": "eslint . && prettier --check .",
-    "lint:fix": "prettier --write . && eslint --fix ."
+    "lint": "next lint && prettier --check .",
+    "lint:fix": "prettier --write . && next lint --fix ."
   },
   "dependencies": {
-    "next": "10.2.3",
+    "next": "11.0.0",
     "next-i18next": "8.5.0",
     "next-pwa": "5.2.21",
     "react": "17.0.2",
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "eslint": "7.28.0",
+    "eslint-config-next": "11.0.0",
     "prettier": "2.3.1",
     "typescript": "4.3.2"
   }
