--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "4.27.0",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
+    "eslint-config-prettier": "8.3.0",
     "prettier": "2.3.1",
     "typescript": "4.3.4"
   }
