--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "lint:fix": "prettier --write . && next lint --fix ."
   },
   "dependencies": {
+    "@chakra-ui/react": "1.6.4",
+    "@emotion/react": "11.4.0",
+    "@emotion/styled": "11.3.0",
+    "framer-motion": "4.1.17",
     "next": "11.0.0",
     "next-i18next": "8.5.0",
     "next-pwa": "5.2.21",
