--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "endOfLine": "lf",
+  "endOfLine": "crlf",
   "printWidth": 80
 }
