--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "next": "11.0.1",
     "next-i18next": "8.5.5",
     "next-pwa": "5.2.24",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-plugin-preact": "3.0.6",
+    "preact": "10.5.14",
+    "preact-render-to-string": "5.1.19",
+    "react": "npm:@preact/compat@17.0.2",
+    "react-dom": "npm:@preact/compat@17.0.2",
+    "react-ssr-prepass": "npm:preact-ssr-prepass@1.2.0"
   },
   "devDependencies": {
     "@types/react": "17.0.16",
