--- a/package.json
+++ b/package.json
@@ -24,28 +24,23 @@
     "lint:fix": "prettier --write . && next lint --fix ."
   },
   "dependencies": {
-    "@chakra-ui/react": "1.6.8",
-    "@emotion/react": "11.4.1",
+    "@chakra-ui/react": "1.6.10",
+    "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "framer-motion": "4.1.17",
-    "next": "11.1.2",
-    "next-i18next": "8.8.0",
-    "next-pwa": "5.3.1",
-    "next-plugin-preact": "3.0.6",
-    "preact": "10.5.14",
-    "preact-render-to-string": "5.1.19",
-    "react": "npm:@preact/compat@17.0.2",
-    "react-dom": "npm:@preact/compat@17.0.2",
-    "react-ssr-prepass": "npm:preact-ssr-prepass@1.2.0"
+    "next": "12.0.0",
+    "next-i18next": "8.9.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
-    "@typescript-eslint/eslint-plugin": "4.31.2",
-    "@typescript-eslint/parser": "4.31.2",
+    "@typescript-eslint/eslint-plugin": "5.2.0",
+    "@typescript-eslint/parser": "5.2.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "12.0.0",
     "eslint-config-prettier": "8.3.0",
     "prettier": "2.4.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.4"
   }
 }
