--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "dependencies": {
     "next": "12.0.0",
     "next-i18next": "8.9.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "18.0.0-alpha-4298ddbc5-20211023",
+    "react-dom": "18.0.0-alpha-4298ddbc5-20211023"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
