--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "prettier": "2.4.1",
     "typescript": "4.4.4"
   }
