--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "lint:fix": "prettier --write . && next lint --fix ."
   },
   "dependencies": {
-    "next": "12.0.2",
-    "react": "18.0.0-alpha-9c8161ba8-20211028",
-    "react-dom": "18.0.0-alpha-9c8161ba8-20211028"
+    "next": "12.0.3-canary.1",
+    "react": "18.0.0-alpha-9fb344225-20211102",
+    "react-dom": "18.0.0-alpha-9fb344225-20211102"
   },
   "devDependencies": {
     "@types/react": "17.0.33",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.2",
+    "eslint-config-next": "12.0.3-canary.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "prettier": "2.4.1",
