--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -15,11 +15,10 @@
     "ui": "*"
   },
   "devDependencies": {
-    "config": "*",
-    "eslint": "8.6.0",
-    "next-transpile-modules": "9.0.0",
-    "tsconfig": "*",
     "@types/react": "17.0.38",
-    "typescript": "4.5.4"
+    "next-transpile-modules": "9.0.0",
+    "typescript": "4.5.4",
+    "config": "*",
+    "tsconfig": "*"
   }
 }
