--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -16,8 +16,9 @@
   },
   "devDependencies": {
     "@types/react": "17.0.38",
+    "next-transpile-modules": "9.0.0",
+    "typescript": "4.5.4",
     "config": "*",
-    "tsconfig": "*",
-    "typescript": "4.5.4"
+    "tsconfig": "*"
   }
 }
