--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,6 +6,7 @@
     "eslint-preset.js"
   ],
   "dependencies": {
+    "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsx-a11y": "6.5.1"
