--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "main": "index.js",
   "files": [
-    "eslint-preset.js"
+    "eslint-preset.js",
+    "stylelint-preset.js"
   ],
   "dependencies": {
+    "stylelint": "14.2.0",
+    "stylelint-config-standard": "24.0.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.3.0",
