--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,12 @@
 {
   "name": "ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx",
+  "scripts": {
+    "lint": "eslint . && stylelint \"**/*.css\"",
+    "clean": "rm -rf .turbo node_modules package-lock.json"
+  },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
