--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,16 +1,12 @@
-name: Test
-
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch:
+name: End-to-end tests
+on: [push]
 
 jobs:
+  cypress-run:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2.5.1
@@ -28,14 +24,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run format check
-        run: npm run format:check
-
-      - name: Run lint
-        run: npm run lint
-
-      - name: Run tests
-        run: npm run test
-
-      - name: Run build
-        run: npm run build
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run e2e
+          start: npm run dev
+          wait-on: 'http://localhost:3000, http://localhost:3001, http://localhost:3002'
+          browser: chrome
