--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-jsx-a11y": "6.5.1"
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-cypress": "2.12.1"
   }
 }
