test: add Cypress E2E tests (#153)
* test: add Cypress E2E tests

* pass GITHUB_TOKEN to Cypress

* add artifact upload steps

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run format check
         run: npm run format:check
