--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,9 +1,12 @@
 name: End-to-end tests
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   cypress-run:
-  test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -31,7 +34,7 @@ jobs:
         with:
           command: npm run e2e
           start: npm run dev
-          wait-on: 'http://localhost:3000, http://localhost:3001, http://localhost:3002'
+          wait-on: 'http://localhost:3001/blog, http://localhost:3002/admin, http://localhost:3000/'
           browser: chrome
 
       - uses: actions/upload-artifact@v2
