--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "lint": "next lint && stylelint \"**/*.css\"",
-    "clean": "rm -rf .turbo node_modules .next package-lock.json"
+    "clean": "rm -rf .turbo node_modules .next out package-lock.json"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "ui": "*"
