--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "typescript": "4.5.4",
     "tsconfig": "*",
-    "config": "*",
-    "typescript": "^4.5.4"
+    "config": "*"
   }
 }
