--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -3,7 +3,7 @@ name: Deploy App
 on:
   workflow_dispatch:
     inputs:
-      app:
+      appName:
         type: choice
         required: true
         description: 'Choose the app you want to deploy'
@@ -47,7 +47,7 @@ jobs:
 
       - name: Run export
         run: |
-          cd apps/${{ app }}
+          cd apps/${{ github.event.inputs.appName }}
           npx next export
 
       - name: GCP auth
@@ -58,5 +58,5 @@ jobs:
       - name: Upload to folder
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
-          path: 'apps/${{ github.event.inputs.app }}/out'
-          destination: '${{ secrets.gcp_frontend_bucket_name }}/${{ github.event.inputs.app }}'
+          path: 'apps/${{ github.event.inputs.appName }}/out'
+          destination: '${{ secrets.gcp_frontend_bucket_name }}/${{ github.event.inputs.appName }}'
