--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -53,10 +53,10 @@ jobs:
       - name: GCP auth
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.gcp_upload_credentials }}'
+          credentials_json: '${{ secrets.GCP_UPLOAD_CREDENTIALS }}'
 
       - name: Upload to folder
         uses: 'google-github-actions/upload-cloud-storage@v0'
         with:
           path: 'apps/${{ github.event.inputs.appName }}/out'
-          destination: '${{ secrets.gcp_frontend_bucket_name }}/${{ github.event.inputs.appName }}'
+          destination: '${{ secrets.GCP_FRONTEND_BUCKET_NAME }}/${{ github.event.inputs.appName }}'
