ci: disable parent for folder upload

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -60,3 +60,4 @@ jobs:
         with:
           path: 'apps/${{ github.event.inputs.appName }}/out'
           destination: '${{ secrets.GCP_FRONTEND_BUCKET_NAME }}/${{ github.event.inputs.appName }}'
+          parent: false
