--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,8 +17,11 @@
   "devDependencies": {
     "@types/react": "17.0.38",
     "next-transpile-modules": "9.0.0",
-    "typescript": "4.5.4",
+    "typescript": "4.5.5",
     "config": "*",
     "tsconfig": "*"
+  },
+  "jest": {
+    "preset": "config/jest"
   }
 }
