--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "files": [
     "eslint-preset.js",
-    "stylelint-preset.js"
+    "stylelint-preset.js",
+    "jest"
   ],
   "dependencies": {
     "stylelint": "14.2.0",
@@ -13,6 +14,11 @@
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-cypress": "2.12.1"
+    "eslint-plugin-cypress": "2.12.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/jest-dom": "5.16.1",
+    "ts-jest": "27.1.3",
+    "identity-obj-proxy": "3.0.0",
+    "@types/jest": "27.4.0"
   }
 }
