--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,14 +4,18 @@
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
   "scripts": {
+    "test": "jest",
     "lint": "eslint . && stylelint \"**/*.css\"",
     "clean": "rm -rf .turbo node_modules package-lock.json"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "typescript": "4.5.4",
+    "typescript": "4.5.5",
     "tsconfig": "*",
     "config": "*"
+  },
+  "jest": {
+    "preset": "config/jest"
   }
 }
