--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,5 @@
 {
   "extends": "tsconfig/react-library.json",
   "include": ["./src"],
-  "exclude": ["dist", "build", "node_modules"],
-  "compilerOptions": {
-    "isolatedModules": false
-  }
+  "exclude": ["dist", "build", "node_modules"]
 }
