--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 3001",
     "build": "next build",
     "lint": "next lint",
-    "clean": "rm -rf .turbo node_modules .next out package-lock.json"
+    "test": "jest",
+    "clean": "rm -rf .turbo node_modules out .next package-lock.json"
   },
   "dependencies": {
     "next": "12.0.8",
