--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --port 3002",
     "build": "next build",
     "lint": "next lint",
+    "test": "jest",
     "clean": "rm -rf .turbo node_modules out .next package-lock.json"
   },
   "dependencies": {
@@ -17,8 +18,11 @@
   "devDependencies": {
     "@types/react": "17.0.38",
     "next-transpile-modules": "9.0.0",
-    "typescript": "4.5.4",
+    "typescript": "4.5.5",
     "config": "*",
     "tsconfig": "*"
+  },
+  "jest": {
+    "preset": "config/jest"
   }
 }
