--- a/apps/home/package.json
+++ b/apps/home/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "lint": "next lint && stylelint \"**/*.css\"",
-    "clean": "rm -rf .turbo node_modules .next out package-lock.json"
+    "test": "jest",
+    "clean": "rm -rf .turbo node_modules out .next package-lock.json"
   },
   "dependencies": {
     "next": "12.0.8",
@@ -17,8 +18,11 @@
   "devDependencies": {
     "@types/react": "17.0.38",
     "next-transpile-modules": "9.0.0",
-    "typescript": "4.5.4",
+    "typescript": "4.5.5",
     "config": "*",
     "tsconfig": "*"
+  },
+  "jest": {
+    "preset": "config/jest"
   }
 }
