--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,13 @@
 {
-  "extends": ["config:base", "schedule:daily"],
+  "extends": ["config:base", "group:allNonMajor"],
   "labels": ["type: dependencies"],
   "vulnerabilityAlerts": {
     "labels": ["type: security"]
   },
   "rollbackPrs": true,
-  "lockFileMaintenance": { "enabled": true }
+  "reviewersFromCodeOwners": true,
+  "prHourlyLimit" 10,
+  
+  "lockFileMaintenance": { "enabled": true },
+  "schedule": ["after 10pm and before 5am every weekday", "every weekend"]
 }
