--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -17,8 +17,9 @@
     "eslint-plugin-cypress": "2.12.1",
     "@testing-library/react": "13.3.0",
     "@testing-library/jest-dom": "5.16.4",
-    "ts-jest": "27.1.5",
+    "jest-environment-jsdom": "28.1.0",
+    "ts-jest": "28.0.3",
     "identity-obj-proxy": "3.0.0",
-    "@types/jest": "27.5.2"
+    "@types/jest": "28.1.0"
   }
 }
