--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3.4.1
         with:
-          node-version: '17'
+          node-version-file: '.nvmrc'
 
       - name: Restore npm cache
         uses: actions/cache@v3
