--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@axe-core/playwright": "4.5.1",
     "@playwright/test": "1.27.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
