--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.4",
+    "@heroicons/react": "2.0.13",
     "@next/font": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
